@@ -16,7 +16,7 @@
 ;;; Add this to your ~/.emacs or ~/.emacs.el
 ;;;     (load-library "lilypond-mode.el")
 ;;;     (setq auto-mode-alist
-;;;      (append '(("\\.ly$" . LilyPond-mode) auto-mode-alist)))
+;;;      (cons '("\\.ly$" . LilyPond-mode) auto-mode-alist))
 ;;; 
 
 (load-library "lilypond-font-lock")
