@@ -3,4 +3,4 @@
 %
 % Running LilyPond on this file generates the documentation
 %
-#(eval-string (ly-gulp-file "generate-documentation.scm"))
+#(load-from-path "generate-documentation.scm")
