@@ -1105,7 +1105,8 @@
 (map (lambda (x)
 					; (display (car x)) (newline)
 
-       (set-object-property! (car x) 'translation-type? list?))
+       (set-object-property! (car x) 'translation-type? list?)
+       (set-object-property! (car x) 'is-grob? #t))
      all-grob-descriptions)
 
 
